package ru.shothandTelegrambot.bot;

public enum MessageType {
    TEXT,
    IMAGE,
    COMMAND,
    DOCUMENT
}
